Fix spacing on boingy nav.

--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -385,6 +385,7 @@ nav {
       font-size: 28px;
       font-weight: 700;
       text-align: center;
+      margin-bottom: 10px;
     }
     
     a:hover {
